--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
@@ -298,7 +298,7 @@ action:
                   - variables:
                       script_data_dict: >-
                         {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
-                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb} %}
+                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb, 'timer_mode': true} %}
                         {% set custom = {} %}
                         {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set custom = custom | combine({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
                         {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set custom = custom | combine({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
@@ -317,7 +317,7 @@ action:
                   - variables:
                       script_data_dict: >-
                         {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
-                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb} %}
+                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb, 'timer_mode': true} %}
                         {% set custom = {} %}
                         {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set custom = custom | combine({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
                         {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set custom = custom | combine({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
@@ -336,7 +336,7 @@ action:
                   - variables:
                       script_data_dict: >-
                         {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
-                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb} %}
+                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb, 'timer_mode': true} %}
                         {% set custom = {} %}
                         {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set custom = custom | combine({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
                         {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set custom = custom | combine({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
@@ -365,7 +365,7 @@ action:
                   - variables:
                       script_data_dict: >-
                         {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
-                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb} %}
+                        {% set base = {'room_key': room_key_var, 'fallback_lights': fb, 'timer_mode': true} %}
                         {% set custom = {} %}
                         {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set custom = custom | combine({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
                         {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set custom = custom | combine({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
