--- a/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
@@ -84,8 +84,9 @@ scheduled_light_on:
           {% if timer_mode_active %}
             {% if dynamic_fallback %}
               {% set fb_entity = dynamic_fallback %}
-              {% if fb_entity is string and fb_entity in all_lights %}
-                {{ states(fb_entity) == 'on' }}
+              {% if fb_entity is string %}
+                {% set expanded = expand(fb_entity) %}
+                {{ expanded | selectattr('state','eq','on') | list | count > 0 }}
               {% else %}
                 {{ false }}
               {% endif %}
@@ -95,6 +96,16 @@ scheduled_light_on:
           {% else %}
             {{ true }}
           {% endif %}
+    
+    # Debug logging
+    - service: "logbook.log"
+      data:
+        name: "scheduled_light_on"
+        message: >-
+          Timer mode={{ timer_mode }}, fallback_lights={{ fallback_lights }}, 
+          scene={{ scene_to_activate }}, scene_exists={{ scene_exists }},
+          lights_on_check={{ lights_on_check }}, dynamic_fallback={{ dynamic_fallback }}
+    
     - choose:
         - conditions: "{{ scene_exists and lights_on_check | bool }}"
           sequence:
