--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -1087,8 +1087,16 @@ data:
                           message: >-
                             Firing night scene for room {{ room_key_var }}, target_lights={{ _targets_raw }}
                       - variables:
+                          _fb_var: >-
+                            {% if target_lights_var is mapping and 'entity_id' in target_lights_var %}
+                              {{ target_lights_var.entity_id }}
+                            {% elif target_lights_var is mapping %}
+                              {{ '' }}
+                            {% else %}
+                              {{ target_lights_var }}
+                            {% endif %}
                           script_data_dict: >-
-                            {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
+                            {% set fb = _fb_var %}
                             {% set base = {'room_key': room_key_var, 'fallback_lights': fb, 'timer_mode': true} %}
                             {% set custom = {} %}
                             {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set custom = custom | combine({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
@@ -1101,7 +1109,7 @@ data:
                         data:
                           name: "room_timer_control"
                           message: >-
-                            Calling script.scheduled_light_on with fallback_lights={{ fb }}, timer_mode=true
+                            Calling script.scheduled_light_on with fallback_lights={{ _fb_var }}, timer_mode=true
                       - service: "script.scheduled_light_on"
                         data: "{{ script_data_dict }}"
                   - conditions: []
