--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -987,6 +987,13 @@ data:
         id: "timer_check"
     
     action:
+      # CRITICAL: System log to verify automation is running
+      - service: "system_log.write"
+        data:
+          message: >-
+            [room_timer_control] Automation triggered for {{ room_key_var }} at {{ now_hm }}
+          level: "info"
+      
       - variables:
           # Extract target entity IDs safely
           _targets_raw: >-
@@ -1073,6 +1080,11 @@ data:
     
           - conditions: "{{ fired_slot == 'night' and en_night | bool }}"
             sequence:
+              - service: "system_log.write"
+                data:
+                  message: >-
+                    [room_timer_control] Night slot detected! en_night={{ en_night }}, any_on={{ any_on }}, ao_night={{ ao_night }}
+                  level: "info"
               - service: "logbook.log"
                 data:
                   name: "room_timer_control"
@@ -1081,6 +1093,11 @@ data:
               - choose:
                   - conditions: "{{ any_on or ao_night | bool }}"
                     sequence:
+                      - service: "system_log.write"
+                        data:
+                          message: >-
+                            [room_timer_control] Firing night scene for room {{ room_key_var }}, target_lights={{ _targets_raw }}
+                          level: "info"
                       - service: "logbook.log"
                         data:
                           name: "room_timer_control"
@@ -1105,6 +1122,11 @@ data:
                             {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set custom = custom | combine({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
                             {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set custom = custom | combine({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
                             {{ base | combine(custom) }}
+                      - service: "system_log.write"
+                        data:
+                          message: >-
+                            [room_timer_control] Calling script.scheduled_light_on with fallback_lights={{ _fb_var }}, timer_mode=true
+                          level: "info"
                       - service: "logbook.log"
                         data:
                           name: "room_timer_control"
