--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
@@ -276,6 +276,13 @@ trigger:
     id: "timer_check"
 
 action:
+  # CRITICAL: System log to verify automation is running
+  - service: "system_log.write"
+    data:
+      message: >-
+        [room_timer_control] Automation triggered for {{ room_key_var }} at {{ now_hm }}
+      level: "info"
+  
   - variables:
       # Extract target entity IDs safely
       _targets_raw: >-
@@ -362,6 +369,11 @@ action:
 
       - conditions: "{{ fired_slot == 'night' and en_night | bool }}"
         sequence:
+          - service: "system_log.write"
+            data:
+              message: >-
+                [room_timer_control] Night slot detected! en_night={{ en_night }}, any_on={{ any_on }}, ao_night={{ ao_night }}
+              level: "info"
           - service: "logbook.log"
             data:
               name: "room_timer_control"
@@ -370,6 +382,11 @@ action:
           - choose:
               - conditions: "{{ any_on or ao_night | bool }}"
                 sequence:
+                  - service: "system_log.write"
+                    data:
+                      message: >-
+                        [room_timer_control] Firing night scene for room {{ room_key_var }}, target_lights={{ _targets_raw }}
+                      level: "info"
                   - service: "logbook.log"
                     data:
                       name: "room_timer_control"
@@ -394,6 +411,11 @@ action:
                         {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set custom = custom | combine({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
                         {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set custom = custom | combine({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
                         {{ base | combine(custom) }}
+                  - service: "system_log.write"
+                    data:
+                      message: >-
+                        [room_timer_control] Calling script.scheduled_light_on with fallback_lights={{ _fb_var }}, timer_mode=true
+                      level: "info"
                   - service: "logbook.log"
                     data:
                       name: "room_timer_control"
