--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_timer_control.yaml
@@ -423,10 +423,9 @@ action:
                       message: >-
                         Calling script.scheduled_light_on with fallback_lights={{ _fb_var }}, timer_mode=true
                   - service: "script.scheduled_light_on"
-                    data:
+                    data_template:
                       fallback_lights: "{{ _fb_var }}"
                       timer_mode: true
-                      room_key: "{{ room_key_var }}"
                       {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}
                       custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
                       {% endif %}
